Thu Jul  2 16:36:11 UTC 2009  Ben Podgursky  <bpodgursky@gmail.com>

        * SA_WorkingPlan.cpp:

	Resolve CL threat fails if it is asked to schedule something before 20.

Thu Jul  2 05:38:02 UTC 2009  Ben Podgursky  <bpodgursky@gmail.com>

        * PlanCommands.h:
        * SA_PlanCommands.h:
        * SA_PlanCommands.cpp:
        * SA_PlanStrategy.h:
        * SA_PlanStrategy.cpp:
        * SA_WorkingPlan.cpp:

        Changed open condition resolution to resolve conditions for one task at a time.

Wed Jul  1 22:13:25 UTC 2009  Daniel L.C. Mack  <daniel.l.mack@vanderbilt.edu>

        * SA_PlanStrategy.cpp:
        * SA_WorkingPlan.cpp:
        Updated to allow for goal_task_inst to be part of threats.
        Small aesthetic changes

Tue Jun 30 20:10:07 UTC 2009  Daniel L.C. Mack  <daniel.l.mack@vanderbilt.edu>

        * SA_PlanStrategy.cpp:
        * SA_SchedStrategy.cpp:
        Modified undo for removing open conds to match the breadth first search.
        Indented some of ankits code for readability.

Mon Jun 29 21:52:33 UTC 2009  Ben Podgursky  <bpodgursky@gmail.com>

        * SA_PlanCommands.cpp:
        * SA_WorkingPlan.cpp:

        Added ability to use 20 again if it is undone once.

Mon Jun 29 21:02:05 UTC 2009  Ben Podgursky  <bpodgursky@gmail.com>

        * PlanCommands.h:
        * Planner.cpp:
        * SA_PlanStrategy.h:
        * SA_PlanStrategy.cpp:
        * SA_SchedStrategy.h:
        * SA_SchedStrategy.cpp:
        * SA_WorkingPlan.cpp:

        Decision points numbered wrong

Mon Jun 29 16:59:21 UTC 2009  Ben Podgursky  <bpodgursky@gmail.com>

        * SA_PlanCommands.cpp:
        In execute next of AddTaskCmd, was a bug in checking for tasks_.front()==20 if
                tasks is null.  Swapped with returning false if tasks is empty to return first.

        * SA_PlanHeuristics.cpp:
        Bug here where tasks were being stored in a map with the EU as the key.  Tasks with the